# Vigil

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  auth.py  main.py  metrics.py  models.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CoreBreakdown.tsx  DitherBar.tsx  HeaderStatus.tsx  LoadAverage.tsx  LoginForm.tsx  MetricCell.tsx  MountsTable.tsx  NetworkInterfaces.tsx  ProcessTable.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useMetrics.ts  useMetricsStream.ts  usePrivateMetricsStream.ts  useTheme.ts
frontend/src/styles/: global.css  layout.css  tokens.css
frontend/src/types/: metrics.ts
frontend/src/utils/: format.ts
